--- a/app/views/user_mailer/new_berry_email.text.erb
+++ b/app/views/user_mailer/new_berry_email.text.erb
@@ -1,7 +1,7 @@
 Hi, <%= @user.name %>
-===============================================
+
  
-You got a berry
+You got a match
 check it out: <%= @url %>.
 
 Have a great day!
