--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,74 +1,87 @@
-<div class="columns">
-<div class="column col-6 centered">
-	    <%= form_for(@user, :html => {:class => 'form-horizontal' }) do |f| %>
-	    		<% if @user.errors.any? %>
-				    <div id="error_explanation">
-				      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>
+<%= form_for(@user, :html => {:class => 'columns profile' }) do |f| %>
+		<div class="column col-3 col-lg-12">
+			<div class="edit-image">
+	    	<img class="rounded user-avatar" src="<%= @user.avatar.large_avatar %>">
+	    	<%= f.file_field :avatar, class: "form-input input-lg" %>
+	    	<button class="btn btn-sm">Upload</button>
+	    </div>
+	    <p class="title-line">Interests <%= link_to t('btn.edit'), tag_users_path, class: 'float-right'%></p>
+	    <%= render partial: "tags/list", locals: {tags: @user.tag_list} %>
+		</div>
+		<div class="column col-6 col-lg-12">
+			<% if @user.errors.any? %>
+		    <div id="error_explanation">
+		      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>
 
-				      <ul>
-				      <% @user.errors.full_messages.each do |message| %>
-				        <li><%= message %></li>
-				      <% end %>
-				      </ul>
-				    </div>
-				  <% end %>
-	        <div class="form-group">
-	            <div class="col-sm-3">
-	            		<%= f.label :username, class: "form-label" %>
-	            </div>
-	            <div class="col-sm-9">
-	                <%= f.text_field :username, class: "form-input" %>
-	            </div>
-	        </div>
-	        <div class="form-group">
-	            <div class="col-sm-3">
-	                <%= f.label :email, class: "form-label" %>
-	            </div>
-	            <div class="col-sm-9">
-	                <%= f.text_field :email, class: "form-input" %>
-	            </div>
-	        </div>
-	        <div class="form-group">
-	            <div class="col-sm-3">
-	                <%= f.label :gender, class: "form-label" %>
-	            </div>
-	            <div class="col-sm-9">
-	                <label class="form-radio">
-                 		<%= f.radio_button :gender, 'm' %> 
-		  							<i class="form-icon"></i>
-		  							<%= f.label :gender, 'Male', :value => 'm' %>
-		  						</label>
-		  						<label class="form-radio">
-                 		<%= f.radio_button :gender, 'f' %> 
-		  							<i class="form-icon"></i>
-		  							<%= f.label :gender, 'Female', :value => 'f' %>
-		  						</label>
-	            </div>
-	        </div>
-	        <div class="form-group">
-	            <div class="col-sm-3">
-	                <%= f.label :about, class: "form-label" %>
-	            </div>
-	            <div class="col-sm-9">
-	          			<%= f.text_area :about, :maxlength => 512, :size => 100, placeholder: "Write here something you would like to do in your life.", class:"form-input" %>
-	            </div>
-	        </div>
-          <div class="form-group">
-        			<div class="col-sm-3">
-    						<label>UPLOAD PICTURE:</label>
-	            </div>
-	            <div class="col-sm-9">
-	          			<%= f.file_field :avatar, class: "form-input" %>
-	            </div>
-					</div>
-	        <div class="form-group">
-	            <div class="col-sm-3"></div>
-	            <div class="col-sm-9">
-	             		<%= f.submit "Confirm", class: "btn btn-primary float-right" %>
-	                <button class="btn btn-link float-right" type="reset">Cancel</button>
-	            </div>
-	        </div>
-	    <% end %>
-	</div>
-</div>
+		      <ul>
+		      <% @user.errors.full_messages.each do |message| %>
+		        <li><%= message %></li>
+		      <% end %>
+		      </ul>
+		    </div>
+	  	<% end %>
+		 	<div class="form-group inline">
+        	<%= f.label :username, class: "form-label" %>
+          <%= f.text_field :username, class: "form-input input-lg" %>
+      </div>
+			<div class="form-group inline right">
+          <%= f.label :email, class: "form-label" %>
+         	<%= f.text_field :email, class: "form-input input-lg" %>
+	    </div>
+	    <div class="clearfix"></div>
+	    <div class="form-group">
+	        <%= f.label :full_street_address, class: "form-label" %>
+	    		<%= f.text_field :full_street_address, placeholder: "In which city do you live?", class: "select-city" %>
+	    </div>
+	    <script src="https://cdn.jsdelivr.net/places.js/1/places.min.js"></script>
+        <script>
+        (function() {
+          var placesAutocomplete = places({
+            container: document.querySelector('.select-city'),
+            type: 'city',
+            aroundLatLngViaIP: false,
+            templates: {
+              value: function(suggestion) {
+                return suggestion.name;
+              }
+            }
+          });
+        })();
+      </script>
+	    <div class="form-group">
+	        <%= f.label :about, class: "form-label" %>
+					<%= f.text_area :about, :maxlength => 512, :size => 100, placeholder: "Write here something you would like to do in your life.", class:"form-input input-text-area" %>
+			</div>
+	    <div class="form-group">
+	        <%= f.label :job, class: "form-label" %>
+	        <%= f.text_field :job, class: "form-input input-lg" %>
+	    </div>
+	    <div class="form-group">
+          <%= f.label :languages, class: "form-label" %>
+          <%= f.text_field :languages, class: "form-input input-lg" %>
+	    </div>    
+	    <div class="form-group">
+	        <%= f.label :birthday, class: "form-label" %>
+          <%= f.date_select :birthday, {}, {start_year: 1995, required: 'true', autofocus: 'true', class: 'form-select select-lg'} %>
+	    </div>    
+	    <div class="form-group">
+          <%= f.label :country, class: "form-label" %>
+          <%= f.country_select :country, {}, {required: 'true', autofocus: 'true', class: 'form-select select-lg'} %>
+	    </div>    
+	    <div class="form-group">
+        <%= f.label :gender, class: "form-label" %>
+        <label class="form-radio">
+       		<%= f.radio_button :gender, 'm' %> 
+					<i class="form-icon"></i>
+					<%= f.label :gender, 'Male', :value => 'm' %>
+				</label>
+				<label class="form-radio">
+       		<%= f.radio_button :gender, 'f' %> 
+					<i class="form-icon"></i>
+					<%= f.label :gender, 'Female', :value => 'f' %>
+				</label>
+	    </div>   
+			<%= f.submit t('btn.confirm'), class: "btn btn-primary btn-lg float-right" %>
+		</div>
+<% end %>
 
