--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,33 +1,34 @@
+<%= content_for :body_class, "chat-view" %>
 
-<div class="columns">
-	<div class="column col-4" id="chat-list">
-			<ul class="menu">
-				<li class="menu-header">
-		        <span class="menu-header-text">
-		            Chat with
-		        </span>
-		    </li>
+<%= content_for :aside_left do %>
+  	<aside class="aside aside-1 open-chat">
+			<h6 class="title-line title"><%= t('default.openchat') %></h6>
+			<ul class="list">
 	 	 		<%= render @chat_rooms %>
-	 	 	</ul>
-	</div>
-	<div class="column col-8 right-col-messages">
-		
+			</ul>
+  	</aside>
+<% end %>
+
+<section class="main message-layout">
+	<div id="center-side" class="chat-messages-layout">
+		<%= will_paginate @messages %>
 		<div id="messages" class="clearfix" data-chat-room-id="<%= @chat_room.id %>">
-		  <%= render @chat_room.messages %>
+		  <%= render @messages.reverse %>
 		</div>
-		
+
 		<%= form_for @message, url: '#' do |f| %>
-			<span id="typing">...</span>
 			<div id="text-input">
 		  	<%= hidden_field_tag 'chat_room_id', @chat_room.id %>
-		  	<div class="new">
-		    	<%= f.text_area :body, class: 'form-control form-input', :placeholder => "Type a message..." %>
+		  	<div class="new-message-layout">
+		    	<%= f.text_field :body, class: 'form-control form-input', :placeholder => "Type a message..." %>
+  				<span id="typing">...</span>
+					<%= f.submit "Send", class: 'btn-send' %>
 		  	</div>
-				<%= f.submit "Send", class: 'btn btn-primary btn-lg send' %>
 			</div>
 		<% end %>
 
-</div>
+	</div>
+</section>
 
 <script>
 	window.userId = <%= current_user.id %>
