--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<%= render "header" %>
+
+<p>Hello <%= @resource.name %>!</p>
 
 <p>We're contacting you to notify you that your password has been changed.</p>
