--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,26 +1,45 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), remote: false, :html => {:class => 'form-horizontal' })  do |f| %>
+
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), remote: false) do |f| %>
+ 
   <%= devise_error_messages! %>
-
   <div class="form-group">
-    <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-input" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.text_field :username, placeholder: "Full name", class: "form-input" %>
+    <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-input input-lg" %>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password, autocomplete: "off",placeholder: "Password", class: "form-input" %>
+    <%= f.text_field :username, placeholder: "Full name", class: "form-input input-lg" %>
   </div>
-  <div class="form-group form-radio-btn">
-      <%= f.radio_button :local, true, :checked => false %>
-      <%= f.label :local, 'Local', :value => true, class: "left" %>
-      <%= f.radio_button :local, false, :checked => false %> 
-      <%= f.label :local, 'New comer', :value => false, class: "right" %>
+
+  <div class="form-group">
+    <%= f.password_field :password, autocomplete: "off",placeholder: "Password", class: "form-input input-lg" %>
   </div>
-  <p class="terms-text">By clicking Sign Up, you agree to our <a href="">Terms</a> and that you have read our <a href="">Data Policy</a>.</p>
-  <div class="form-group float-right" data-no-turbolink>
+
+  <span class="btn-link tooltip" data-tooltip="<%= t ('sign.info') %>"><%= raw t ('sign.areyou') %></span>
+
+  <div class="form-group form-radio-btn clearfix">
+    <%= f.radio_button :local, true, :checked => false, :class => "for_local" %>
+    <%= f.label :local, 'Local', :value => true, class: "left" %>
+    <%= f.radio_button :local, false, :checked => false, :class => "for_new" %> 
+    <%= f.label :local, 'New comer', :value => false, class: "right" %>
+  </div>
+
+  <p class="terms-text"><%= raw t ('sign.policy') %></p>
+
+  <div class="form-group" data-no-turbolink>
       <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
   </div>
-  <div class="clearfix"></div>
+
 <% end %>
+
+<script type="text/javascript" language="JavaScript">
+  document.querySelector("#new_user").addEventListener("submit", function(e){
+    var a = document.getElementsByClassName('for_local')[0].checked;
+    var b = document.getElementsByClassName('for_new')[0].checked;
+    if(!a && !b) {
+      e.preventDefault();
+      return alert('Please fill all the fileds in the form.');
+    }else{
+      return false;
+    }
+  });
+</script> 
