--- a/app/views/tags/_list.html.erb
+++ b/app/views/tags/_list.html.erb
@@ -1,7 +1,9 @@
+<div class="clearfix listed-tags">
 <% if !tags.nil? %>
-	<% tags.split(',').each do |tag| %>
+	<% tags.each do |tag| %>
 		<div class="chip-sm">
 		    <span class="chip-name"><%= tag %></span>
 		</div>
 	<% end %>
 <% end %>
+</div>
