--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,23 @@
 
-<%= form_for(@user) do |f| %>
- 
-  <div class="field">
-    <%= f.text_field :tag_list %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-
-<div class="float-left">
+<div class="columns profile">
+	<div class="column col-3 col-lg-12">
+    <img class="rounded user-avatar" src="<%= @user.avatar.large_avatar %>">
+    <p class="title-line">Interests</p>
     <%= render partial: "tags/list", locals: {tags: @user.tag_list} %>
+	</div>
+	<div class="column col-9 col-lg-12">
+		<h3 class="username">
+			<%= @user.username %>
+			<span class="location"><%= @user.full_street_address %></span>
+		</h3>
+		<h6 class="job-title"><%= @user.job %></h6>
+		<b>About:</b>
+		<p><%= @user.about %></p>
+		<b>Age:</b>
+		<p><%= @user.age %></p>
+		<b>Languages:</b>
+		<p><%= @user.languages %></p>
+		<b>Country:</b>
+		<p><%= @user.country_name %></p>
+	</div>
 </div>
