--- a/app/assets/stylesheets/main-app.scss
+++ b/app/assets/stylesheets/main-app.scss
@@ -5,7 +5,7 @@
 @import 'base/_layout.scss';
 @import 'base/_drop.scss';
 @import 'base/_signup.scss';
-@import 'base/_swaloverlay.css';
+@import 'base/_swaloverlay.scss';
 @import 'base/_selectize.scss';
 @import 'base/_search.scss';
 @import 'base/_header.scss';
