--- a/app/assets/stylesheets/base/_milligram.scss
+++ b/app/assets/stylesheets/base/_milligram.scss
@@ -599,19 +599,19 @@ pre code {
   color: #fff;
 }
 .btn.btn-primary:focus {
-  background: #4856c1;
-  border-color: #3b49af;
+  background: #1dcfda;
+  border-color: #c5c5c5;
   color: #fff;
 }
 .btn.btn-primary:hover {
-  background: #404fbe;
-  border-color: #35419c;
+  background: #1dcfda;
+  border-color: #c5c5c5;
   color: #fff;
 }
 .btn.btn-primary:active,
 .btn.btn-primary.active {
-  background: #3e4cb6;
-  border-color: #35419c;
+  background: #1dcfda;
+  border-color: #c5c5c5;
   color: #fff;
 }
 .btn.btn-primary.loading::after {
