--- a/app/views/tags/_select.html.erb
+++ b/app/views/tags/_select.html.erb
@@ -1,23 +1,39 @@
-<ul id="select-tag-list">
-		<% tags.each do |tag| %>
-			<li class="tag-bubble">
-			    <span><%= tag %></span>
-			</li>
-		<% end %>
-<!--     <button id="add-new-tag">add</button>
- -->    
-    <div class="clearfix"></div>
-</ul>
+<div class="columns">
+  <div class="column col-12 centered tag-selection-box">
+    <h3><%=  t("tag_selection.title") %></h3>
+    <p><%=  t("tag_selection.subtitle") %></p>
 
-<%= form_for(@user)do |f| %>
-  <div class="form-group">
-    <%= f.text_field :tag_list, hidden:true %>
-  </div>
-  <div class="form-group">
-    <%= f.submit t('btn.next'), :class => 'btn-next float-right', :id => "btn-add-tag" %>
-  </div>
-<% end %>
 
-<script>
-  var usertags = "<%= @usertags %>";
-</script>
+    <ul id="select-tag-list" class="clearfix">
+    		<% tags.each do |tag| %>
+    			<li class="tag-bubble">
+    			    <span><%= tag %></span>
+    			</li>
+    		<% end %>
+    </ul>
+
+    <%= form_for(@user)do |f| %>
+      <div class="form-group">
+        <%= f.text_field :tag_list, hidden:true %>
+      </div>
+        <%= f.submit t('btn.next'), :class => 'btn-next float-right', :id => "submit-user-tags" %>
+    <% end %>
+  </div>
+</div>
+
+<div class="columns">
+
+  <div class="column col-12">
+    <h3><%=  t("tag_selection.maketitle") %></h3>
+    <p><%= raw t("tag_selection.makeyours") %></p>
+  </div>
+
+  <div class="column col-3 input-group">
+      <input type="text" class="form-input input-lg" id="custom-tag-input" placeholder="Add your custom tag">
+      <button class="btn btn-primary input-group-btn btn-lg" id="add-new-tag">Add</button>
+  </div>
+
+  <script>
+    var usertags = "<%= @usertags %>";
+  </script>
+</div>
