--- a/app/views/users/update_location.html.erb
+++ b/app/views/users/update_location.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :body_class, "hide-footer" %>
+
 <div class="columns">
   <div class="column col-9 centered">
     <h3>Where do you live?</h3>
