--- a/app/assets/stylesheets/main-app.scss
+++ b/app/assets/stylesheets/main-app.scss
@@ -7,6 +7,7 @@
 @import 'base/_signup.scss';
 @import 'base/_swaloverlay.scss';
 @import 'base/_selectize.scss';
+@import 'base/_footer.scss';
 @import 'base/_search.scss';
 @import 'base/_header.scss';
 @import 'base/_nav.scss';
