--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :search do %>
-		<div class="column">
+		<div class="column col-5">
 			<div id="search-bar" data-turbolinks-permanent>
 	      <%= form_tag '', :method => :get, :"data-turboform" => :true do %>
 	        <%= text_field_tag :tags, params[:t], :id => 'tags-filter', :placeholder => "Search in blendin",  :autofocus => true %>
