--- a/app/views/users/update_tags.html.erb
+++ b/app/views/users/update_tags.html.erb
@@ -1,7 +1,2 @@
-<div class="columns">
-	<div class="column col-12 centered">
-		<h3>Tell us what inspire you.</h3>
-		<p>Choose at least 3 interest and we'll suggest you people based on your choices.</p>
-    <%= render partial: "tags/select", locals: {tags: @mostused} %>
-	</div>
-</div>
+<%= content_for :body_class, "hide-footer" %>
+<%= render partial: "tags/select", locals: {tags: @mostused} %>
