--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -47,14 +47,14 @@ body{
     z-index: 99999;
     overflow: hidden;
 
-  &:before{
-    content: " ";
+  .shadow-element{
+    position: absolute;
     background: rgba(0, 0, 0, 0.53);
-    position:fixed;
     left: 0;
     top: 0; 
     height:100%; 
     width:100%;
+    z-index: 0;
   }
   .content{
     -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1);
@@ -69,7 +69,7 @@ body{
     overflow-y: scroll;
   }
   #close-overlay{
-    z-index: 11;
+    z-index: 9999;
     position: absolute;
     left: 20px; top: 20px;
     width: 50px;
