--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
       <div id="content-drop-footer" class="sub-nav">
         <ul>
             <li><a href="http://info.blendinnow.nl" target="_blank">About Blendin</a></li>
-            <li><a href="" target="_blank">Terms & Conditions</a></li>
+            <li><a href="https://www.iubenda.com/privacy-policy/7951305" target="_blank">Privacy Policy</a></li>
             <li><a href="https://www.iubenda.com/privacy-policy/7951305/cookie-policy" target="_blank">Cookie Policy</a></li>
         </ul>
       </div>
@@ -51,8 +51,8 @@
 
   <div id="panel-overlay">
     <button id="close-overlay">CLOSE</button>
-    <div class="content">
-    </div>
+    <div class="content"></div>
+    <div class="shadow-element"></div>
   </div>
 
   </body>
