--- a/app/views/user_mailer/match_email.html.erb
+++ b/app/views/user_mailer/match_email.html.erb
@@ -4,13 +4,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hi, <%= @user.name %></p>
+    <p>Hi <%= @user.name %>,</p>
+
+    <p>Looks like you have a new blend! You seem to have in common this interests <b><%= @user.cached_tag_list %></b> with someone you blended. (is het mogelijk om dit zo te automatiseren dat je hier de (voor)naam van degene ziet met wie je een blend hebt, en ook de overeenkomstige interesses?). Did you already set a date to meet one another?</p>
     <p>
-      You've got a <b>blend</b>.<br>
+      Start to have a chat form here: <a href="<%= @url %>">link</a>.
     </p>
-    <p>
-      To see your new blend, just follow this <a href="<%= @url %>">link</a>.
-    </p>
-    <p>Have a great day!</p>
+    <p>We hope you enjoy Blendin :),</p>
+
+    <p>Blendin Team</p>
   </body>
 </html>
