--- a/app/views/users/_user_profile.html.erb
+++ b/app/views/users/_user_profile.html.erb
@@ -4,7 +4,6 @@
 	    <img class="rounded user-avatar" src="<%= @user.avatar.large_avatar %>">
 			<h3 class="username"><%= @user.username %></h3>
 			<span class="location"><%= @user.full_street_address %></span>
-			<h6 class="job-title"><%= @user.job %></h6>
 		</div>
 	</div>
 	<div class="column col-12">
@@ -12,6 +11,8 @@
     <%= render partial: "tags/list", locals: {tags: @user.tag_list} %>
 		<b>About:</b>
 		<p><%= @user.about %></p>
+		<b>Job:</b>
+		<p><%= @user.job %></p>
 		<b>Age:</b>
 		<p><%= @user.age %></p>
 		<b>Languages:</b>
