--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,2 +1,3 @@
 $('#panel-overlay').show().find('.content').toggleClass('slide-in-bounce');
 $('#panel-overlay .content').html("<%= escape_javascript(render partial: 'user_profile' ) %>"); 
+initNocAjaxRequest();
