--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -45,12 +45,15 @@
       </div>
     </main>
     <script type="text/javascript">
-      var _iub = _iub || [];
-      _iub.csConfiguration = {
-        cookiePolicyId: 7951305,
-        siteId: 647263,
-        lang: "nl",
-        priorConsent: false
+        var _iub = _iub || [];
+          _iub.csConfiguration = {
+            cookiePolicyId: 7951305,
+            siteId: 647263,
+            lang: "nl",
+            priorConsent: false,
+            banner: {
+              slideDown: true,
+              fontSize: "10px"}
       };
     </script>
     <script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
