--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -24,7 +24,8 @@
   </div>
 
   <p class="terms-text">
-    <%= raw t("sign.policy", :href_cookie => link_to(t("sign.cookie_href"), 'https://www.iubenda.com/privacy-policy/7951305/cookie-policy'), :href_policy => link_to(t("sign.data_href"), 'https://www.iubenda.com/privacy-policy/7951305')) %>
+    <%= raw t("sign.policy", :href_cookie => link_to(t("sign.cookie_href"), 'https://www.iubenda.com/privacy-policy/7951305/cookie-policy'), :href_policy => link_to(t("sign.data_href"), 'https://www.iubenda.com/privacy-policy/7951305'),
+    :href_terms => link_to(t("sign.data_terms"), '/docs/Terms_and_conditions_Blendin.docx')) %>
   </p>
   <div class="form-group" data-no-turbolink>
       <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
