--- a/app/assets/stylesheets/base/_chat.scss
+++ b/app/assets/stylesheets/base/_chat.scss
@@ -182,7 +182,10 @@
   animation: bubble 1000ms linear both;
 }
 
-
+.sad-face-norooms{
+    width: 60%; 
+    margin:0 auto; 
+}
 
 @-webkit-keyframes bubble { 
   0% { -webkit-transform: matrix3d(1, 0.141, 0, 0, -0.364, 1, 0, 0, 0, 0, 1, 0, 0, 20, 0, 1); transform: matrix3d(1, 0.141, 0, 0, -0.364, 1, 0, 0, 0, 0, 1, 0, 0, 20, 0, 1); }
@@ -211,45 +214,43 @@
 }
 
 
-
-
+.cs-btn{
+    float: right;
+    display: none;
+}
+.on-btn{
+    text-align:left;
+    font-weight: bold;
+    display: none;
+    margin-top: -20px;
+}
 
 @media (max-width: 640px) { 
+    #messages{
+        height: 75vh;
+        overflow-y: scroll;
+        padding:0;
+    }
+    .sad-face-norooms{
+        width: 100%;
+    }
     .aside.aside-1.open-chat{
         border-right:0;
     }
+    .cs-btn, .on-btn{
+        display: block;
+    }
     .open-chat{
-        order: 1; 
-        height: auto;
-        overflow: scroll;
-        border-right:0;
-        .list{
-            overflow-y: none;
-            overflow-x: scroll;
-            height: auto; width:100%;
-            padding-bottom: 0;
-            width: 90em;
-            li{
-                cursor: pointer;
-                margin:0; padding:0;
-                border-bottom: 0;
-                border-right: 0;
-                display: inline-block;
-                &:last-child{
-                    border-right: 0;
-                }
-                a{
-                }
-            }
-            .avatar{
-                float: none;
-                margin: 0.3rem;
-            }
-            .info{
-                display: none;
-            }
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        left: -100%;
+        padding:0.5em 0 0.5em 0;
+        transition: .5s;
+        &.slide-in-out{
+            left:0;
         }
-
     }
     .message-layout{
         order:2;
