--- a/app/assets/stylesheets/base/_nav.scss
+++ b/app/assets/stylesheets/base/_nav.scss
@@ -109,6 +109,24 @@
     display: none;
 }
 
-@media (min-width: 40.0rem) { 
-
+@media screen and (max-width: 480px) {
+    .nav{
+        li:first-child{
+            margin-right: 1em;
+        }
+    }
+    .btn-account{
+        font-size: 0;
+        margin-top: 0;
+        padding:0;
+            span.avatar{
+                width: 2.6em;
+                height: 2.6em;
+            }
+    }
+    .chat-link {
+        width: 30px;
+        height: 30px;
+        background-size: 100%;
+    }
 }
