--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Blendin</title>
-    <meta name="viewport" content="width=device-width">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>    
     <%= stylesheet_link_tag 'auth', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -26,13 +27,15 @@
       </div>
     <% end %>
 
-    <main>
+    <header>
       <% if (params[:controller] == "registrations") %>
-        <%= link_to "Log in", new_user_session_path, class: "btn btn-link btn-link-auth" %>
+        <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
       <% else %>
-        <%= link_to "Register", new_user_registration_path, class: "btn btn-link float-right btn-link-auth" %>
+        <%= link_to "Register", new_user_registration_path, class: "btn btn-primary" %>
       <% end %>
-      <div class="aligner">
+    </header>
+    <main>
+      <div class="aligner mtn-40">
         <div class="auth-box">
           <%= link_to root_path do %>
               <%= image_tag("logo-app.png", class: "logo-app") %>
@@ -51,9 +54,12 @@
             siteId: 647263,
             lang: "nl",
             priorConsent: false,
+             innerHtmlCloseBtn: "OK",
             banner: {
-              slideDown: true,
-              fontSize: "10px"}
+              slideDown: false,
+              fontSize: "10px",
+              applyStyles: false
+          }
       };
     </script>
     <script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
