--- a/app/views/nav/_main.html.erb
+++ b/app/views/nav/_main.html.erb
@@ -1,5 +1,5 @@
 
-<div class="column col-xs-4">
+<div class="column col-xs-7 nav-column">
 		<div class="nav float-right">
 			<li>
   			<%= link_to t('nav.chat'), chat_rooms_path, class: "chat-link" %>
