--- a/app/views/tags/_select.html.erb
+++ b/app/views/tags/_select.html.erb
@@ -21,14 +21,14 @@
   </div>
 </div>
 
-<div class="columns">
+<div class="columns custom-tag-box">
 
   <div class="column col-12">
     <h3><%=  t("tag_selection.maketitle") %></h3>
     <p><%= raw t("tag_selection.makeyours") %></p>
   </div>
 
-  <div class="column col-3 input-group">
+  <div class="column col-3 col-xs-12 input-group">
       <input type="text" class="form-input input-lg" id="custom-tag-input" placeholder="Add your custom tag">
       <button class="btn btn-primary input-group-btn btn-lg" id="add-new-tag">Add</button>
   </div>
