--- a/app/views/user_mailer/message_unread.html.erb
+++ b/app/views/user_mailer/message_unread.html.erb
@@ -8,7 +8,7 @@
 
     <p>You have some unread messages today!</p>
     <p>
-      check it here: <a href="http://blendinow.nl/rooms">Link</a>
+      check it here: <a href="http://blendinnow.nl/rooms">Link</a>
     </p>
     <p>We hope you enjoy Blendin :),</p>
 
