--- a/app/views/user_mailer/message_unread.text.erb
+++ b/app/views/user_mailer/message_unread.text.erb
@@ -3,5 +3,5 @@ Blendin
 
 Hi, <%= @user.name %>
 You got a new message.
-To see your new match, go to blendinow.nl.
+To see your new match, go to blendinnow.nl.
 Have a great day!
