--- a/app/assets/stylesheets/base/_card.scss
+++ b/app/assets/stylesheets/base/_card.scss
@@ -43,6 +43,15 @@
           margin: 0.5rem 0;
           min-height: auto;
           width: 49.1%;
+            .btn.btn-sm{
+              position: absolute;
+              top: 0.5em;
+              right: 0.5em;
+              font-size: 1.4rem;
+              height: 3rem;
+              line-height: 2rem;
+              font-weight: bold;
+            }
       }
   }
 
