--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -220,7 +220,10 @@ body{
 @media screen and (max-width: 480px) {
   footer{ display: none; }
   #panel-overlay{
-      .content{ width: 100%; padding:1.2em;}
+      .content{ width: 100%; padding:5rem 1.2em;}
+       .title-line{
+        margin-bottom: 1em;
+       }
       #close-overlay{
         background-color:#000;
         width: 50px;
