--- a/app/views/nav/_main.html.erb
+++ b/app/views/nav/_main.html.erb
@@ -2,7 +2,7 @@
 <div class="column col-xs-7 nav-column">
 		<div class="nav float-right">
 			<li>
-  			<%= link_to t('nav.chat'), chat_rooms_path, class: "chat-link" %>
+  			<%= active_link_to t('nav.chat'), chat_rooms_path, class: "chat-link" %>
   			<% if  unread_messages != "0" %>
   				<p class="unread"><%= unread_messages %></p>
   			<% end %>
