--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -46,7 +46,11 @@
           <%= yield %>
         </div>
       </div>
+      <footer>
+        <a href="http://blendinnow.info" target="_blank">About Blendin</a>
+      </footer>
     </main>
+   
     <script type="text/javascript">
         var _iub = _iub || [];
           _iub.csConfiguration = {
