--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -79,12 +79,19 @@
 	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	min-height:100vh;
+	min-height:90vh;
 }
 .mtn-40{
 	margin-top:-40px;
 }
-
+.bg-auth{
+	footer{
+		text-align:center;
+		a{
+			text-decoration: none;
+		}
+	}
+}
 /***PAGINATION***/
 .pagination{
 	width:100%;
