--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 
       <div id="content-drop-footer" class="sub-nav">
         <ul>
-            <li><a href="http://info.blendinnow.nl" target="_blank">About Blendin</a></li>
+            <li><a href="http://blendinnow.info" target="_blank">About Blendin</a></li>
             <li><a href="https://www.iubenda.com/privacy-policy/7951305" target="_blank">Privacy Policy</a></li>
             <li><a href="https://www.iubenda.com/privacy-policy/7951305/cookie-policy" target="_blank">Cookie Policy</a></li>
         </ul>
