--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>Blendin</title>
     <meta name="description" content="Berry helps you to connect with people that share your same interests :)">
- 
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     
