--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Blendin</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
     <%= csrf_meta_tags %>    
     <%= stylesheet_link_tag 'auth', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
