--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.radio_button :local, true, :checked => false, :class => "for_local" %>
     <%= f.label :local, 'Local', :value => true, class: "left" %>
     <%= f.radio_button :local, false, :checked => false, :class => "for_new" %> 
-    <%= f.label :local, 'New comer', :value => false, class: "right" %>
+    <%= f.label :local, 'New in NL', :value => false, class: "right" %>
   </div>
 
   <p class="terms-text">
