--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,9 +5,7 @@
       <% end %>
     </div>
     <div class="card-header">
-    	<%if (!current_user.likes(user)) %>
-    		<%= link_to t('btn.noc'), like_knok_path(user), remote:true, method: :put, class:"noc-btn btn btn-sm float-right" %>
-    	<% end %>
+        <%= link_to t('btn.noc'), chat_rooms_path(user: user), class:"btn btn-sm float-right" %>
         <h4 class="card-title"><%= truncate(user.name, length: 12) %></h4>
         <h6 class="card-meta"><%= user.country_name %></h6>
     </div>
